[package]
name = "stm32h7-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Change stm32h743bi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "stm32h7a3zi", "time-driver-any", "exti", "memory-x", "unstable-pac", "unstable-traits"] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

#embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
#embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6"] }
#embedded-io-async = { version = "0.5.0" }
#embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }


usbd-hid = "0.6.0"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embedded-hal = "0.2.6"
# embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
# embedded-hal-async = { version = "=1.0.0-rc.1" }
# embedded-nal-async = { version = "0.5.0" }

# futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
# heapless = { version = "0.7.5", default-features = false }
# rand_core = "0.6.3"
# critical-section = "1.1"
# micromath = "2.0.0"
# stm32-fmc = "0.2.4"
# embedded-storage = "0.3.0"
static_cell = { version = "1.1", features = ["nightly"]}


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-